--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+          registry-url: https://npm.pkg.github.com/
       - name: Install project dependencies
         run: npm install
       - name: Build a project
