Some changes [skip ci]

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,10 @@
 *.scss text diff=css
 *.htm text diff=html
 *.html text diff=html
+
+# Set the default behavior, in case people don't have core.autocrlf set.
+* text=auto
+
+# Checkout example and test fixtures with linux line ending
+# to guarantee test successes
+tests/** text eol=lf
