Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -14,10 +14,18 @@ server {
 # Configure a virtual host (packer.baythium.com)
 server {
   listen 80;
+  # listen [::]:80;
+
+  # listen 443 ssl;
+  # listen [::]:443 ssl;
+
   server_name packer.baythium.com localhost;
+
+  # limit_conn arbeit 32;
 
   # charset koi8-r;
   # access_log /var/log/nginx/log/host.access.log main;
+  # error_log /var/log/nginx/log/host.error.log main;
 
   location / {
     # Define the document root, containing the files you wish to serve to your visitors
@@ -25,6 +33,11 @@ server {
     index index.html index.htm;
 
     # include /etc/nginx/naxsi.rules;
+
+    # ssl on;
+    # ssl_certificate /etc/nginx/certs/certs/baythium.com.cer;
+    # ssl_certificate_key /etc/nginx/certs/private/baythium.com.key;
+    # ssl_trusted_certificate /etc/nginx/certs/ca-certs.pem;
   }
 
   include /etc/nginx/custom-errors.conf;
