Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,18 +4,30 @@
 # File: /nginx/nginx.conf
 # Organization: Baythium Ecosystem: https://baythium.com
 
+###################
+# SIMPLE DIRECTIVES
+###################
+
 # LOAD MODULES
 # load_module /usr/local/nginx/modules/ngx_nchan_module.so;
 # include /usr/share/nginx/modules/*.conf;
 
-# Specify a user account and group
+# Specify a user account and group (Defines the account under which Nginx worker process will be executed on the server)
+# WARNING: The user should exist on the server before Nginx starts or else there will be an error while starting Nginx services.
+# WARNING: Nginx should be executed under a least-privileged account.
 user nginx nginx;
 
 # master_process on;
 
 # Start functioning with a single worker process
-worker_processes 1; # 4
+# NOTE: Make this value equal to the number of processors on your server
+# NOTE: Setting the value to auto is also permitted and in that case Nginx tries to autodetect the number of cores.
+worker_processes 1; # 4, auto
 pid /var/run/nginx.pid;
+
+##################
+# BLOCK DIRECTIVES
+##################
 
 events {
   worker_connections 4096;
