Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -25,7 +25,12 @@ server {
 
   # charset koi8-r;
   # access_log /var/log/nginx/log/host.access.log main;
-  # error_log /var/log/nginx/log/host.error.log main;
+
+  # NOTE: The logging levels HAVE TO be defined in increasing order
+  # WARNING: The logging level <info> IS NOT recommended in production since the logs may become massive if your website is hit very frequently.
+  # NOTE: The logs should be periodically analyzed to verify if it contains anything alarming.
+  # NOTE: You SHOULD always set the log level to either warn or error.
+  # error_log /var/log/nginx/log/host.error.log warn;
 
   location / {
     # Define the document root, containing the files you wish to serve to your visitors
