Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,14 +23,25 @@ user nginx nginx;
 # NOTE: Make this value equal to the number of processors on your server
 # NOTE: Setting the value to auto is also permitted and in that case Nginx tries to autodetect the number of cores.
 worker_processes 1; # 4, auto
+
+# Define the file name that stores the process ID of the master process /var/run/nginx.pid.
+# NOTE: Required for automating the monitoring of processes.
+# Examples:
+# ps -ax | grep nginx
+# ps -p 30212 -o etime=
+# ps -p `cat /var/run/nginx.pid` -o etime=
 pid /var/run/nginx.pid;
 
 ##################
 # BLOCK DIRECTIVES
 ##################
 
+# Define event contexts
 events {
-  worker_connections 4096;
+  Allow a maximum of 4096 concurrent worker connections.
+  # NOTE: The number of concurrent connections you may get on a web server can be calculated roughly using the following (N = average number of connections per request):
+  # (worker_processes x worker_connections x N) / Average Request Time
+  worker_connections 4096; # 1024
   multi_accept on;
   use epoll;
 }
