Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,7 +38,7 @@ pid /var/run/nginx.pid;
 
 # Define event contexts
 events {
-  Allow a maximum of 4096 concurrent worker connections.
+  # Allow a maximum of 4096 concurrent worker connections.
   # NOTE: The number of concurrent connections you may get on a web server can be calculated roughly using the following (N = average number of connections per request):
   # (worker_processes x worker_connections x N) / Average Request Time
   worker_connections 4096; # 1024
