Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,9 +20,11 @@ user nginx nginx;
 # master_process on;
 
 # Start functioning with a single worker process
-# NOTE: Make this value equal to the number of processors on your server
+# NOTE: Make this value equal to the number of processors on your server, i.e. one worker per CPU-core
 # NOTE: Setting the value to auto is also permitted and in that case Nginx tries to autodetect the number of cores.
-worker_processes 1; # 4, auto
+worker_processes 1; # 1, 2, 4, 8, 16, 32, auto
+
+# worker_rlimit_nofile 40000;
 
 # Define the file name that stores the process ID of the master process /var/run/nginx.pid.
 # NOTE: Required for automating the monitoring of processes.
@@ -41,7 +43,7 @@ events {
   # Allow a maximum of 4096 concurrent worker connections.
   # NOTE: The number of concurrent connections you may get on a web server can be calculated roughly using the following (N = average number of connections per request):
   # (worker_processes x worker_connections x N) / Average Request Time
-  worker_connections 4096; # 1024
+  worker_connections 4096; # 1024, 8096 (quad-core processor)
   multi_accept on;
   use epoll;
 }
