--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,8 +44,29 @@ events {
   # NOTE: The number of concurrent connections you may get on a web server can be calculated roughly using the following (N = average number of connections per request):
   # (worker_processes x worker_connections x N) / Average Request Time
   worker_connections 4096; # 1024, 8096 (quad-core processor)
+
+  # Accept as many connections as possible.
   multi_accept on;
+
+  # Set connection methods depending on the platform.
+  # NOTE: Available modes are:
+  # - select: Efficient method on Windows though it's the worst performing and is used when more efficient methods are not available on a platform;
+  # - poll: Standard method;
+  # - kqueue: Efficient method on FreeBSD, OpenBSD, NetBSD and Max OSX;
+  # - epoll: Efficient method on Linux;
+  # - /dev/poll: Solaris, IRIX;
+  # - eventport: Efficient method on Solaris 10
   use epoll;
+
+  # Worker processes MUST get the requests one by one
+  # NOTE: This implies that the worker processes will not jump up for every request and go back to sleep if the number of requests is low.
+  #
+  # @see: https://en.m.wikipedia.org/wiki/Thundering_herd_problem
+  # @see: https://en.m.wikipedia.org/wiki/Lock_convoy
+  accept_mutex on;
+
+  # Set the maximum time to wait for the existing worker process to accept the new connection before initiating a new process to execute the request.
+  accept_mutex_delay 500ms;
 }
 
 http {
@@ -82,7 +103,9 @@ http {
   # server_names_hash_bucket_size 64;
   # server_name_in_redirect off;
 
-  # Import a list of file extensions and their associated MIME types
+  # Import a list of file extensions and their associated MIME types (It maps file name extension to MIME types of responses)
+  # NOTE: The extensions are case insensitive and there can be many extensions mapped to one type.
+  # NOTE: MIME types describe the media type of content and guides the browser so that it renders the content appropriately in the browser instead of downloading the file
   include /etc/nginx/mime.types;
 
   default_type application/octet-stream;
