Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -108,7 +108,11 @@ http {
   # NOTE: MIME types describe the media type of content and guides the browser so that it renders the content appropriately in the browser instead of downloading the file
   include /etc/nginx/mime.types;
 
+  # Specify the default MIME type if Nginx fails to find a specific one in the /etc/nginx/mine.types.
+  # NOTE: It is this MIME type that guides the browser that it has to download the file directly.
   default_type application/octet-stream;
+
+  # Write the log in a specified format
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                   '$status $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for"';
