Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -4,6 +4,10 @@
 # File: /nginx/nginx.default.conf
 # Organization: Baythium Ecosystem: https://baythium.com
 
+##################
+# BLOCK DIRECTIVES
+##################
+
 # Configure a virtual host (packer.bayesianflow.space)
 server {
   listen 80;
@@ -24,6 +28,9 @@ server {
   # limit_conn arbeit 32;
 
   # charset koi8-r;
+  
+  # NOTE: Every request you make from the server is logged to a file so that you can analyze it later
+  # NOTE: A good web administrator takes very good care of these logs, and analyzes it periodically to find out issues that sometimes go unnoticed. These logs also prove to be helpful during troubleshooting scenarios.
   # access_log /var/log/nginx/log/host.access.log main;
 
   # NOTE: The logging levels HAVE TO be defined in increasing order
