Update nginx.conf [skip ci]

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -72,10 +72,20 @@ events {
 http {
   # SPECIFIC SETTINGS FOR THE DOCKER IMAGE
 
+  # Ensure that the function is called with SF_NODISKIO so the calls will not block on disk I/O.
+  # NOTE: The data is loaded in chunks and sent appropriately to the client. It has a huge advantage and enables Nginx to scale very well, especially while serving large files.
   sendfile on;
+
+  # NOTE: This comes into effect only when you are using sendfile and basically directs the Nginx server to send the packets in full.
   tcp_nopush on;
+
   tcp_nodelay on;
+
+  # NOTE: Normally, when a connection is made to the server, you need not disconnect the connection straightaway. That is because a web page normally comprises of a lot of assets. It will not be very effective to create a new connection for every asset that is sent to the client.
+  # NOTE: Hence, the first few connections are made to the server and then, they are kept alive. The idea is to deliver the rest of the assets on the same set of connections one after the other.
+  # Let's say there were 125 assets (css, js, html, images and etc.) in a page. When the client accesses the URL, it might create 2 connections or more (modern browsers open a lot more connections). Assuming 5 connections were made, those assets will be delivered one by one to the client in parallel over 5 different connections! What do you think will happen to the open connections if the page is delivered in just 3 seconds? Well, they will continue to live and, as you can guess, will waste resources on the server. This is the reason why this directive exists. It allows the server to close the connection in 65 seconds automatically if the client doesn't return and the connection is idle. On a busy server, you MAY choose to reduce this timeout.
   keepalive_timeout 65;
+
   types_hash_max_size 2048;
   server_tokens off;
   server_name_in_redirect off;
@@ -126,8 +136,10 @@ http {
   error_page 412 /exceptions/412/index.html;
   error_page 500 502 503 504 /exceptions/50x/index.html;
 
+  # Compress the output so that lesser bandwidth is consumed per request
   # NOTE: You need to disable gzip to avoid the removal of the ETag header
   gzip on;
+
   gzip_disable "MSIE [1-6].(?!.*SV1)";
 
   gzip_vary on;
@@ -143,7 +155,7 @@ http {
   # Use CloudFlare DNS and cache results for 1 hour
   # resolver 1.1.1.1 1.0.0.1 valid=1h;
  
-  # Additional configuration imports
+  # Load all the configuration file sat once from the folder /etc/nginx/conf.d. 
   include /etc/nginx/conf.d/*.conf;
   # include /etc/nginx/sites-enabled/*;
   # include /etc/nginx/naxsi_core.rules;
