Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -8,6 +8,8 @@
 # BLOCK DIRECTIVES
 ##################
 
+# NOTE: There are 2 server blocks and both of them are listening on port 80 using the listen directive.
+
 # Configure a virtual host (packer.bayesianflow.space)
 server {
   listen 80;
@@ -17,6 +19,8 @@ server {
 
 # Configure a virtual host (packer.baythium.com)
 server {
+  # Listen to port 80 with the server_name as localhost and packer.baythium.com
+  # NOTE: It is important to keep the port as 80 for a public-facing website, or else the end user will have to type the port explicitly in the URL
   listen 80;
   # listen [::]:80;
 
