Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -42,11 +42,14 @@ server {
   # NOTE: The logs should be periodically analyzed to verify if it contains anything alarming.
   # NOTE: You SHOULD always set the log level to either warn or error.
   # error_log /var/log/nginx/log/host.error.log warn;
-
+  
+  # NOTE: Location directive points to the actual content on the web server
   location / {
     # Define the document root, containing the files you wish to serve to your visitors
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    
+    # Specify the name of default files that is sent to the client if the file name is not found.
+    index index.html index.htm default.htm;
 
     # include /etc/nginx/naxsi.rules;
 
@@ -59,16 +62,19 @@ server {
   include /etc/nginx/custom-errors.conf;
 
   # Deny access to .htaccess files
+  # NOTE: ~: Case sensitive search
   location ~ /\.ht {
     deny  all;
   }
 
-  # Allow visitors to cache static files 
+  # Allow visitors to cache static files
+  # NOTE: ~*: Case insensitive search. Ideal for most cases.
   # location ~* .(?:jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ { 
   #  expires 7d; 
   #  access_log off; 
   # }
-
+  
+  # NOTE: Do not check any regular expressions if the matching prefix location has ^∼
   location ^~ /api/ {
     limit_except GET { 
       # error_page 403 /exceptions/403/index.html; 
@@ -82,6 +88,7 @@ server {
     }
   } 
 
+  # NOTE: =: Directs Nginx to do an exact match of URI and location. It is a good idea to provide exact matches for every URL that is frequently used so that Nginx doesn't need to do a search.
   # location = /exceptions/403/index.html { 
   #   allow all; 
   # }
