Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -27,7 +27,7 @@ server {
   # listen 443 ssl;
   # listen [::]:443 ssl;
 
-  server_name packer.baythium.com localhost;
+  server_name packer.baythium.com localhost 127.0.0.1;
 
   # limit_conn arbeit 32;
 
