--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -8,6 +8,19 @@
 # BLOCK DIRECTIVES
 ##################
 
+# Balance the load across two HTTP servers on port 80
+# NOTE: The weight parameter instructs NGINX to pass twice as many connections to the second server, and the weight parameter defaults to 1.
+upstream backend {
+  # least_conn;
+
+  server 10.10.0.101:80 weight=1;
+  server 10.10.0.102:80 weight=2;
+  server 10.10.0.103:80 weight=3;
+
+  # Create and track a cookie that ties a downstream client to an upstream server.
+  # sticky cookie affinity expires=1h domain=packer.baythium.com httponly secure path=/;
+}
+
 # NOTE: There are 2 server blocks and both of them are listening on port 80 using the listen directive.
 
 # Configure a virtual host (packer.bayesianflow.space)
@@ -57,6 +70,8 @@ server {
     # ssl_certificate /etc/nginx/certs/certs/baythium.com.cer;
     # ssl_certificate_key /etc/nginx/certs/private/baythium.com.key;
     # ssl_trusted_certificate /etc/nginx/certs/ca-certs.pem;
+    
+    # proxy_pass http://backend;
   }
 
   include /etc/nginx/custom-errors.conf;
