Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -8,7 +8,7 @@
 # BLOCK DIRECTIVES
 ##################
 
-# Balance the load across two HTTP servers on port 80
+# Balance the load across two and more HTTP servers on port 80
 # NOTE: The weight parameter instructs NGINX to pass twice as many connections to the second server, and the weight parameter defaults to 1.
 upstream backend {
   # least_conn;
