Update nginx.default.conf [skip ci]

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -60,6 +60,9 @@ server {
   location / {
     # Define the document root, containing the files you wish to serve to your visitors
     root /usr/share/nginx/html;
+
+    # Enable the directory listing of a folder in Nginx
+    # autoindex on;
     
     # Specify the name of default files that is sent to the client if the file name is not found.
     index index.html index.htm default.htm;
@@ -79,7 +82,8 @@ server {
   # Deny access to .htaccess files
   # NOTE: ~: Case sensitive search
   location ~ /\.ht {
-    deny  all;
+    # Deny access to any specific location
+    deny all;
   }
 
   # Allow visitors to cache static files
