--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -123,8 +123,9 @@ http {
   default_type application/octet-stream;
 
   # Write the log in a specified format
-  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                  '$status $body_bytes_sent "$http_referer" '
+  # NOTE: Take a look at your access.log using tail command: tail /var/log/nginx/access.log
+  log_format main '$remote_addr - $remote_user [$time_local] "$document_root$document_uri" '
+                  '"$request" $status $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for"';
 
   # Error pages (Exceptions)
