--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "11ty:serve-dev": "npm run clean && set ELEVENTY_ENV=\"development\" && eleventy --serve --port 10033 --watch",
     "11ty:serve-prod": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --serve --port 10033 --watch",
     "11ty:serve": "npm run 11ty:serve-dev",
+    "11ty:serve-experimental": "ELEVENTY_EXPERIMENTAL=true npx @11ty/eleventy --serve --port 10033",
     "11ty:debug": "set DEBUG=\"Eleventy*\" && eleventy --serve --port 10033 --watch",
     "11ty:watch": "eleventy --port 10033 --watch",
     "11ty:build-quietly": "npm run clean && set ELEVENTY_ENV=\"production\" && eleventy --quiet",
