--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths-ignore:
       - readme.md
+      - docs/
     branches:
       - master
 jobs:
@@ -59,4 +60,4 @@ jobs:
             [[ -n $images ]] && docker rmi $images
             timestamp=$(date +%s) 
             docker build . --rm --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$timestamp
-            docker run -d --name baythium-packer_client --expose 10033 --net baythium-network-1 -e "VIRTUAL_HOST=packer.baythium.com,packer.bayesianflow.space" --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
+            docker run -d --name baythium-packer_client --expose 10033 --net baythium-network-1 -e "VIRTUAL_HOST=packer.baythium.com,packer.baythium.space" --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
