[publish] nginx config

--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -8,24 +8,11 @@
 # BLOCK DIRECTIVES
 ##################
 
-# Balance the load across two and more HTTP servers on port 80
-# NOTE: The weight parameter instructs NGINX to pass twice as many connections to the second server, and the weight parameter defaults to 1.
-upstream backend {
-  # least_conn;
-
-  server 10.10.0.101:80 weight=1;
-  server 10.10.0.102:80 weight=2;
-  server 10.10.0.103:80 weight=3;
-
-  # Create and track a cookie that ties a downstream client to an upstream server.
-  # sticky cookie affinity expires=1h domain=packer.baythium.com httponly secure path=/;
-}
-
 # NOTE: There are 2 server blocks and both of them are listening on port 80 using the listen directive.
 
 # Configure a virtual host (packer.bayesianflow.space)
 server {
-  listen 80;
+  listen 10033;
   server_name packer.bayesianflow.space;
   return 301 https://packer.baythium.com$request_uri;
 }
@@ -34,13 +21,23 @@ server {
 server {
   # Listen to port 80 with the server_name as localhost and packer.baythium.com
   # NOTE: It is important to keep the port as 80 for a public-facing website, or else the end user will have to type the port explicitly in the URL
-  listen 80;
-  # listen [::]:80;
+  listen 10033;
 
   # listen 443 ssl;
   # listen [::]:443 ssl;
 
-  server_name packer.baythium.com localhost 127.0.0.1;
+  include /etc/nginx/custom-errors.conf;
+
+  # Define the document root, containing the files you wish to serve to your visitors
+  root /usr/share/nginx/html;
+
+  # Enable the directory listing of a folder in Nginx
+  # autoindex on;
+    
+  # Specify the name of default files that is sent to the client if the file name is not found.
+  index index.html index.htm default.htm;
+
+  # include /etc/nginx/naxsi.rules;
 
   # limit_conn arbeit 32;
 
@@ -58,26 +55,8 @@ server {
   
   # NOTE: Location directive points to the actual content on the web server
   location / {
-    # Define the document root, containing the files you wish to serve to your visitors
-    root /usr/share/nginx/html;
-
-    # Enable the directory listing of a folder in Nginx
-    # autoindex on;
-    
-    # Specify the name of default files that is sent to the client if the file name is not found.
-    index index.html index.htm default.htm;
-
-    # include /etc/nginx/naxsi.rules;
-
-    # ssl on;
-    # ssl_certificate /etc/nginx/certs/certs/baythium.com.cer;
-    # ssl_certificate_key /etc/nginx/certs/private/baythium.com.key;
-    # ssl_trusted_certificate /etc/nginx/certs/ca-certs.pem;
-    
-    # proxy_pass http://backend;
+    try_files $uri $uri/ /index.html;
   }
-
-  include /etc/nginx/custom-errors.conf;
 
   # Deny access to .htaccess files
   # NOTE: ~: Case sensitive search
