--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -69,4 +69,4 @@ jobs:
             [[ -n $images ]] && docker rmi $images
             timestamp=$(date +%s) 
             docker build . --rm --file dockerfile --tag baythium-ecosystem/baythium-packer_client:$timestamp
-            docker run -d --name baythium-packer_client --expose 10033 --net baythium-network-1 -e "VIRTUAL_HOST=packer.baythium.com,packer.baythium.space" --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
+            docker run -d --name baythium-packer_client --net baythium-network-1 --ip 172.18.0.42 -p 127.0.0.1:10033:10033 --restart=on-failure:3 baythium-ecosystem/baythium-packer_client:$timestamp
