--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -11,11 +11,11 @@
 # NOTE: There are 2 server blocks and both of them are listening on port 80 using the listen directive.
 
 # Configure a virtual host (packer.bayesianflow.space)
-server {
-  listen 80;
-  server_name packer.bayesianflow.space;
-  return 301 https://packer.baythium.com$request_uri;
-}
+# server {
+#   listen 80;
+#   server_name packer.bayesianflow.space;
+#   return 301 https://packer.baythium.com$request_uri;
+# }
 
 # Configure a virtual host (packer.baythium.com)
 server {
