--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -56,6 +56,7 @@ server {
   # NOTE: Location directive points to the actual content on the web server
   location / {
     try_files $uri $uri/ /index.html;
+    # try_files $uri /index.html =404;
   }
 
   # Deny access to .htaccess files
